[tool.poetry]
name = "vietnam"
version = "0.0.1"
description = ""
authors = ["Elmeri Niemi <elmeri.niemi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
rasterio = "^1.3.10"
geopandas = "^0.14.4"
pyproj = "^3.6.1"
shapely = "^2.0.4"
bs4 = "^0.0.2"
lxml = "^5.2.1"
rasterstats = "^0.19.0"
pandas = "^2.2.2"
netcdf4 = "^1.6.5"
xarray = "^2024.5.0"
rioxarray = "^0.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
